# microscope_app

./: .gitignore  CMakeLists.txt  Makefile  Makefile.app  Makefile.py  camera_settings.json  microscope_app.pro  microscope_app_py.pro  pyproject.toml  run_microscope_app.py  stage_settings.json  yolo_inference.py  yolo_test.py
scripts/: trt_video_test_app.py
src/: CNCControlPanel.h  ColorPickerWidget.h  IntensityChart.cpp  IntensityChart.h  LEDController.h  MainWindow.cpp  MainWindow.h  MosaicPanel.cpp  MosaicWidget.h  ScanConfigPanel.cpp  ScanConfigPanel.h
src/cnc_control_panel_qobject/: cnc_control_panel_qobject.pro
src/cnc_control_panel_qobject/src/: CNCControlPanel.cpp  CNCControlPanel.h
src/color_picker_widget_qobject/: color_picker_widget_qobject.pro
src/editor_qobject/: editor_qobject.pro
src/editor_qobject/src/: PythonScintillaEditor.cpp  PythonScintillaEditor.h
src/intensity_chart_qobject/: intensity_chart_qobject.pro
src/led_controller_qobject/: led_controller_qobject.pro
src/led_controller_qobject/src/: LEDController.cpp
src/microscope_app/: CNCControlPanel.cpp  CNCControlPanel.h  ColorPickerWidget.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  MosaicPanel.cpp  MosaicPanel.h  MosaicWidget.cpp  MosaicWidget.h  PythonConsoleWidget.cpp  PythonConsoleWidget.h  PythonScintillaEditor.cpp  YOLOInferenceWorker.cpp  YOLOInferenceWorker.h  main.cpp  microscope_app_dir.pro  microscope_app_python.cpp
src/mindvision_qobject/: Makefile  Makefile.camera_gui  Makefile.mindvision_lib
src/mindvision_qobject/src/: VideoThread.cpp
src/mosaic_panel_qobject/: mosaic_panel_qobject.pro
src/mosaic_panel_qobject/src/: MosaicPanel.cpp  MosaicPanel.h  MosaicWidget.cpp
src/scan_config_paneL_qobject/: scan_config_paneL_qobject.pro
src/serial_qobject/: Makefile
src/serial_qobject/src/: SerialWorker.cpp  SerialWorker.h
src/yolo_inference_qobject/: yolo_inference_lib.pro
src/yolo_inference_qobject/src/: YOLOInferenceWorker.cpp  YOLOInferenceWorker.h
