[project]
name = "microscope-app"
version = "0.1.0"
description = "Python launcher for the C++ microscope Qt application"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "shiboken6>=6.6",
    "opencv-python>=4.9",
]

[project.scripts]
microscope-app = "run_microscope_app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
